[tool.poetry]
name = "app-name"
version = "0.1.0"
description = "Description."
authors = ["Arno Klein <binarybottle@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.8.0"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
